tests/test_date/bad/output/indivisable_durations.catala_en.DayByMonth.Interpret
[ERROR] Cannot divide durations that cannot be converted to a precise number of days

  --> tests/test_date/bad/indivisable_durations.catala_en
   | 
10 |   definition d equals 1 day /^ 2 month
   |                       ^^^^^
   + `Runtime.IndivisableDurations` exception handling
   +-+ Day divided by months

  --> tests/test_date/bad/indivisable_durations.catala_en
   | 
10 |   definition d equals 1 day /^ 2 month
   |                                ^^^^^^^
   + `Runtime.IndivisableDurations` exception handling
   +-+ Day divided by months
